Changed about page to reflect current version 2.1

--- a/ui/about.html
+++ b/ui/about.html
@@ -17,7 +17,7 @@
 			<table class="table">
 				<tr>
 					<td class="col-xs-6"><strong>Version</strong></td>
-					<td class="col-xs-6">2.0 (30. Oktober 2014)</td>
+					<td class="col-xs-6">2.1 (9. Dezember 2014)</td>
 				</tr>
 				<tr>
 					<td class="col-xs-6"><strong>Entwicklung</strong></td>
