By request: always display sound, light and th entires in lowercase.

--- a/ui/details_modal.html
+++ b/ui/details_modal.html
@@ -43,15 +43,15 @@
 							</tr>
 						<tr class="grey">
 							<td><strong>Sound</strong></td>
-							<td>{{ @item.sound }}</td>
+							<td>{{ @lowercase(@item.sound) }}</td>
 						</tr>
 						<tr class="white">
 							<td><strong>Light</strong></td>
-							<td>{{ @item.light }}</td>
+							<td>{{ @lowercase(@item.light) }}</td>
 						</tr>
 						<tr class="reddish">
 							<td><strong>TH</strong></td>
-							<td>{{ @item.th }}</td>
+							<td>{{ @lowercase(@item.th) }}</td>
 						</tr>
 						<tr class="grey">
 							<td><strong>Bemerkung</strong></td>
