--- a/ui/details_panel.html
+++ b/ui/details_panel.html
@@ -36,15 +36,15 @@
 			</tr>
 			<tr class="grey">
 				<td class="col-xs-3"><b>Sound</b></td>
-				<td class="col-xs-9">{{ @item.sound }}</td>
+				<td class="col-xs-9">{{ @lowercase(@item.sound) }}</td>
 			</tr>
 			<tr class="white">
 				<td class="col-xs-3"><b>Light</b></td>
-				<td class="col-xs-9">{{ @item.light }}</td>
+				<td class="col-xs-9">{{ @lowercase(@item.light) }}</td>
 			</tr>
 			<tr class="reddish">
 				<td class="col-xs-3"><b>TH</b></td>
-				<td class="col-xs-9">{{ @item.th }}</td>
+				<td class="col-xs-9">{{ @lowercase(@item.th) }}</td>
 			</tr>
 			<tr class="grey">
 				<td class="col-xs-3"><b>Bemerkung</b></td>
